--- a/src/template.html
+++ b/src/template.html
@@ -1,1 +1,21 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rui's Restaurant</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <button id="home-button">Home</button>
+      <button id="menu-button">Menu</button>
+      <button id="about-button">About</button>
+    </nav>
+  </header>
+
+  <div id="content">
+    
+  </div>
+</body>
+</html>
